<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.singlescreen.MainActivity"
    android:background="@color/background">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/banner"
        android:textAllCaps="true"
        android:fontFamily="cursive"
        android:textSize="@dimen/large_text"
        android:gravity="center"
        android:textColor="@color/brown"
        android:background="@color/coffee_back"
        android:textStyle="bold"
        android:padding="@dimen/p15"
        android:layout_marginBottom="10dp"/>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="@dimen/images"
        android:id="@+id/viewPager"
        android:layout_marginBottom="@dimen/p10"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/card_bacground"
            card_view:cardCornerRadius="@dimen/p5"
            card_view:cardElevation="@dimen/p10"
            card_view:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/p10"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card"
                    android:layout_weight="1"
                    android:src="@drawable/ques"/>
                <TextView
                    android:textColor="@color/brown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/description"
                    android:padding="@dimen/p5"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text"
                    />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/card_bacground"
        card_view:cardCornerRadius="@dimen/p5"
        card_view:cardElevation="@dimen/p10"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/address"
                android:layout_margin="@dimen/p10"
                android:layout_width="0dp"
                android:layout_height="@dimen/card"
                android:layout_weight="1"
                android:src="@drawable/add"/>
            <TextView
                android:textColor="@color/brown"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/p5"
                android:layout_weight="2"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/card_bacground"
        card_view:cardCornerRadius="@dimen/p5"
        card_view:cardElevation="@dimen/p10"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/call"
                android:layout_margin="@dimen/p10"
                android:layout_width="0dp"
                android:layout_height="@dimen/card"
                android:layout_weight="1"
                android:src="@drawable/call"/>
            <TextView
                android:textColor="@color/brown"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="@dimen/card"
                android:padding="5dp"
                android:layout_weight="2"
                android:text="@string/contact_no"
                android:textStyle="bold"
                android:textSize="@dimen/small_text"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/card_bacground"
            card_view:cardCornerRadius="@dimen/p5"
            card_view:cardElevation="@dimen/p10"
            card_view:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_margin="@dimen/p10"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card"
                    android:layout_weight="1"
                    android:src="@drawable/time"/>
                <TextView
                    android:textColor="@color/brown"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/card"
                    android:padding="@dimen/p5"
                    android:layout_weight="2"
                    android:text="@string/time"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>
</ScrollView>
